# a10

./: .gitignore  README.md
Clippings/: A Detailed Analysis of the KDD CUP 99 Data Set.md  A Practical Guide to Fine-Tuning Small Language Models.md  A reading survey on adversarial machine learning Adversarial attacks and their understanding 1.md  A reading survey on adversarial machine learning Adversarial attacks and their understanding.md  A01 Broken Access Control - OWASP Top 102021.md  A02 Cryptographic Failures - OWASP Top 102021.md  A03 Injection - OWASP Top 102021.md  A04 Insecure Design - OWASP Top 102021.md  A05 Security Misconfiguration - OWASP Top 102021.md  A06 Vulnerable and Outdated Components - OWASP Top 102021.md  (+297 more)
project/: .env.example  cli.py  pyproject.toml  requirements.txt
project/backend/: app.py  config.py  eval_results.json  humaneval_results.json  memory.py  openrouter.py  router.py  test_stream.py  tools.py  verifier.py
project/data/: mmlu_100.csv
project/frontend/: index.html  package-lock.json  package.json
project/frontend/src/: App.tsx  index.css
project/frontend/src/components/ui/: dashboard.tsx  gooey-text-morphing.tsx  query-panel.tsx  scroll-morph-hero.tsx
project/scripts/: download_mmlu.py  run_eval.py  run_humaneval.py
project/tests/: test_router_eval_contract.py  test_run_humaneval.py
project/training/: ENVIRONMENTS.md  integrate.py  prepare_code_alpaca.py  prepare_dataset.py  prepare_function_calling.py  requirements-serve.txt  requirements-train.txt  requirements.txt  serve.py  train.py  train_llama_code.py
(+75 files in other folders)
