[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "router-cli"
version = "0.1.0"
description = "Cost-aware LLM router — developer assistant CLI"
requires-python = ">=3.10"
dependencies = ["rank-bm25"]

[project.scripts]
router = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
