[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "router-cli"
version = "0.1.0"
description = "Cost-aware LLM router — developer assistant CLI"
requires-python = ">=3.10"
dependencies = ["rank-bm25"]

[project.scripts]
dispatch = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
